Fixed issue with jumping red dots

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0 auto;
+    position: relative;
 }
 
 .circle {
@@ -165,8 +166,7 @@ body {
     -webkit-border-radius: 10px;
     border-radius: 10px;
     z-index: 50;
-    display: inline-block;
-    position: relative;
+    position: absolute;
     display: none;
 }
 
